--- a/css/main.less
+++ b/css/main.less
@@ -1,4 +1,15 @@
-/* compile with http://lesscss.org/ */
+#eatwatch {
+  font-size: 58px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 0 white;
+  padding: 20px 0 10px 0;
+}
+.eatwatch-eat { color: #4AAD09; }
+.eatwatch-donteat { color: #FF403F; }
 
-html { font-size: 16px; }
-body { font-size: 62.5%; font-family: Helvetica, Arial, sans-serif; background: white; color: #333333; }
+#calories-input { position: relative;
+  input { font-size: 28px; margin-left: 15%; width: 85%; }
+  label { position: absolute; top: 16px; left: 14px; }
+}
