--- a/css/main.css
+++ b/css/main.css
@@ -1,37 +1,21 @@
-html { font-size: 16px; }
-body {
-  font-size: 62.5%;
-  font-family: Helvetica, Arial, sans-serif;
-  background: white;
-  color: #333333;
+#eatwatch {
+  font-size: 58px;
+  font-weight: bold;
   text-align: center;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 0 white;
+  padding: 20px 0 10px 0;
 }
-h1, h2, h3 { color: #ff4d00; }
-h1 {
-  font-size: 2.6em;
-  margin-bottom: 20px;
+.eatwatch-eat { color: #4aad09; }
+.eatwatch-donteat { color: #ff403f; }
+#calories-input { position: relative; }
+#calories-input input {
+  font-size: 28px;
+  margin-left: 15%;
+  width: 85%;
 }
-h2 {
-  font-size: 2em;
-  margin-bottom: 16px;
+#calories-input label {
+  position: absolute;
+  top: 16px;
+  left: 14px;
 }
-h3 {
-  font-size: 1.6em;
-  margin-bottom: 8px;
-}
-p {
-  font-size: 1.4em;
-  line-height: 18px;
-  margin-bottom: 14px;
-}
-a {
-  color: #ff4d00;
-  text-decoration: none;
-}
-a:hover { text-decoration: underline; }
-#wrapper {
-  width: 800px;
-  margin: 50px auto 0 auto;
-  text-align: left;
-}
-.clear { clear: both; }
