--- a/css/main.less
+++ b/css/main.less
@@ -1,15 +1,14 @@
-#eatwatch {
-  font-size: 58px;
-  font-weight: bold;
-  text-align: center;
-  text-transform: uppercase;
-  text-shadow: 1px 1px 0 white;
-  padding: 20px 0 10px 0;
-}
-.eatwatch-eat { color: #4AAD09; }
-.eatwatch-donteat { color: #FF403F; }
+#eatwatch { height: 24px; }
+.eatwatch-eat { background: #4AAD09; }
+.eatwatch-donteat { background: #FF403F; }
 
 #calories-input { position: relative;
   input { font-size: 28px; margin-left: 15%; width: 85%; }
   label { position: absolute; top: 16px; left: 14px; }
+}
+
+#calories-submit {
+  a { font-size: 30px; padding-left: 76px;  }
+  .eaten { background: url(../images/bomb.png) 10px 5px no-repeat; }
+  .burned { background: url(../images/magic.png) 10px 5px no-repeat; }
 }
