--- a/css/main.less
+++ b/css/main.less
@@ -8,7 +8,5 @@
 }
 
 #calories-submit {
-  a { font-size: 30px; padding-left: 76px;  }
-  .eaten { background: url(../images/bomb.png) 10px 5px no-repeat; }
-  .burned { background: url(../images/magic.png) 10px 5px no-repeat; }
+  a { font-size: 30px; }
 }
