--- a/css/main.less
+++ b/css/main.less
@@ -10,3 +10,11 @@
 #calories-submit {
   a { font-size: 30px; }
 }
+
+#info { background: #ddd;
+  li { border-top: 1px solid #eee; position: relative;
+    h3 { font-size: 14px; }
+    p { text-align: right; position: absolute; top: 8px; right: 10px; color: #333; text-shadow: 1px 1px 0 white; }
+  }
+  li:first-child { border: 0; }
+}
