--- a/views/index.erb
+++ b/views/index.erb
@@ -9,22 +9,22 @@
   </ul>
   
   <ul id="calories-submit" class="rounded">
-    <li class="arrow"><a href="#" class="eaten">Gegessen</a></li>
-    <li class="arrow"><a href="#" class="burned">Verbrannt</a></li>
+    <li class="arrow"><a href="counters/eaten.txt" class="eaten">Gegessen</a></li>
+    <li class="arrow"><a href="counters/burned.txt" class="burned">Verbrannt</a></li>
   </ul>
   
   <ul id="info" class="rounded">
-    <li>
-      <h3>Aktueller Stand</h3>
-      <p>-1702</p>
-    </li>
-    <li>
-      <h3>Heute verbrannt</h3>
-      <p>330</p>
-    </li>
-    <li>
+    <li class="eaten">
       <h3>Heute gegessen</h3>
-      <p>1024</p>
+      <p>0</p>
+    </li>
+    <li class="burned">
+      <h3>Heute verbrannt</h3>
+      <p>0</p>
+    </li>
+    <li class="sum">
+      <h3>Aktueller Stand</h3>
+      <p>0</p>
     </li>
   </ul>
 </div><!-- #home -->
