--- a/views/index.erb
+++ b/views/index.erb
@@ -25,42 +25,8 @@
       <p>0</p>
     </li>
   </ul>
-</div><!-- #home -->
-
-<!--<div id="home">
-	<div class="toolbar">
-	  <h1>Eat Watch</h1>
-	</div>
-	
-	<div class="info">
-	 This is a info field :)
-	</div>
-	
-	<ul class="rounded">
-	  <li class="arrow"><a href="#forms">Show some forms</a></li>
-      <li><a href="#pageevents">Page events</a></li>
-      <li id="swipeme">Swipe me!</li>
-      <li id="orient">Orientation: <strong>profile</strong></li>
-  </ul>
-</div>
-
-<div id="forms">
-  <div class="toolbar">
-    <h1>Heyhey</h1>
-    <a href="#" class="back">Back</a>
-  </div>
   
-  <form>
-    <ul class="edit rounded">
-      <li><input type="text" placeholder="kcal" /></li>
-    </ul>
-    <ul class="rounded">
-      <li><textarea placeholder="Comments here..."></textarea></li>
-    </ul>
-    <ul class="rounded">
-      <li><input type="checkbox" title="Checkbox anybody?" /></li>
-    </ul>
-    
-    <a href="#" class="submit grayButton">Ajax Submit</a>
-  </form>
-</div>-->
+  <div id="reset">
+    <a href="#">Reset</a>
+  </div>
+</div>
