--- a/public/css/main.less
+++ b/public/css/main.less
@@ -18,3 +18,7 @@
   }
   li:first-child { border: 0; }
 }
+
+#reset { text-align: center;
+  a { display: inline; color: white; background: #005D8C; text-decoration: none; padding: 4px 10px 3px 10px; border-radius: 6px; -moz-border-radius: 6px; -webkit-border-radius: 6px; text-shadow: 1px 1px 0 #003F5F; }
+}
