--- a/public/css/main.less
+++ b/public/css/main.less
@@ -11,7 +11,7 @@
   a { font-size: 30px; }
 }
 
-#info { background: #ddd;
+#info { background: #ddd; margin-bottom: 8px;
   li { border-top: 1px solid #eee; position: relative;
     h3 { font-size: 14px; }
     p { text-align: right; position: absolute; top: 8px; right: 10px; color: #333; text-shadow: 1px 1px 0 white; }
@@ -20,5 +20,5 @@
 }
 
 #reset { text-align: center;
-  a { display: inline; color: white; background: #005D8C; text-decoration: none; padding: 4px 10px 3px 10px; border-radius: 6px; -moz-border-radius: 6px; -webkit-border-radius: 6px; text-shadow: 1px 1px 0 #003F5F; }
+  a { display: inline; color: white; background: #005D8C; text-decoration: none; padding: 4px 10px 3px 10px; border-radius: 6px; -moz-border-radius: 6px; -webkit-border-radius: 6px; text-shadow: 1px 1px 0 #003F5F; font-size: 12px; text-transform: uppercase; }
 }
