--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,7 +13,10 @@
   left: 14px;
 }
 #calories-submit a { font-size: 30px; }
-#info { background: #dddddd; }
+#info {
+  background: #dddddd;
+  margin-bottom: 8px;
+}
 #info li {
   border-top: 1px solid #eeeeee;
   position: relative;
@@ -39,4 +42,6 @@
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
   text-shadow: 1px 1px 0 #003f5f;
+  font-size: 12px;
+  text-transform: uppercase;
 }
